      addSource() method. (CNY-2242)
    * The command line interface to cvc derive (added in Conary 1.2.8)
      has been changed.  It now derives onto your buildLabel by default,
      with a --target option to derive onto a different label.
    * verify no longer complains about files which have been removed
      with 'conary remove' (CNY-950)

  o Server Changes:
    * 'serializeCommits' has been added as a new boolean server
      configuration option (CNY-2285)
    * Servers in maintenance mode are no longer returning Internal
      Server Errors to clients' GET requests (CNY-2229)

  o Build Changes:
    * addPatch honors braceGlobs when sourceDir is defined. (CNY-1152)

  o Bug Fixes:
    * A bug that caused an exception when inspecting ELF files with a
      standalone ABI has been fixed. (CNY-2333)
    * A bug that caused updates with group scripts to fail when run
      with the '--root' option with a trailing slash in the path has
      been fixed. (CNY-2348)

Changes in 1.2.9:
  o Documentation Changes:
    * The documentation strings for the update code have been revised
      to include the most common exceptions raised as part of
      prepareChangeSet and updateChangeSet. (CNY-1732)

  o Build Changes:
    * File level requirements provided by the same file are dropped.
      (CNY-2177)
    * Java dependencies that do not start with a valid TLD are now
      excluded. (CNY-2176)
    * The exceptDeps keyword parameter is now allowed for r.Provides(),
      analogously to r.Requires(). (CNY-1485)
    * The new sourceDir keyword parameter is now available for
      r.addSource(), r.addPatch(), and r.addArchive() to specify that
      the source is found within the maindir. (CNY-1439)
    * LD_LIBRARY_PATH is now set when calling bootstrapped python, in
      order to load the correct python libraries. (CNY-2319)
    * The :config component is built by file location, rather than
      from files marked as config files by the Config policy.