@@ -608,6 +608,14 @@ class ChangeSet(streams.StreamSet):
 		if fileObj.hasContents:
 		    fullPath = db.root + path
 
+                    if fileObj.flags.isConfig():
+                        cont = filecontents.FromDataStore(db.contentsStore,
+                                    fileObj.contents.sha1())
+                        rollback.addFileContents(pathId, fileId,
+                                                 ChangedFileTypes.file, cont,
+                                                 fileObj.flags.isConfig())
+                        continue
+
 		    if os.path.exists(fullPath):
 			fsFile = files.FileFromFilesystem(fullPath, pathId,
 				    possibleMatch = fileObj)
